fix: fix a problem where the section-top SVG's lenght is too short

--- a/src/client/assets/scss/bundle/_page.scss
+++ b/src/client/assets/scss/bundle/_page.scss
@@ -91,7 +91,3 @@ html {
  .svg-h-100 {
    height: 100%;
  }
-
- .svg-top-space {
-   //padding-bottom: 2rem;
- }
